<resources>
    <string name="app_name">Sell-It</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_password">Re-Password</string>
    <string name="login">Login</string>
    <string name="it"> - It</string>
    <string name="sell">Sell</string>
    <string name="phone_number">Phone number</string>
    <string name="address">Address</string>
    <string name="full_name">Full Name</string>
    <string name="products">Products</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="select_state">State</string>
    <string name="select_category">Category</string>
    <string name="amount">Amount</string>
    <string name="add_image">Add Image</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="write_a_review">Write a review…</string>
    <string name="write_feedback">Write feedback…</string>
    <string name="order">Order</string>
    <string name="reviews">Reviews</string>
    <string name="order_details">Order details</string>
    <string name="note">Note</string>
    <string name="delivery_method">Delivery method</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="submit">submit</string>
    <string name="credit_card">Credit card</string>
    <string name="cash">Cash</string>
    <string name="cancel">Cancel</string>
    <string name="payment_method">Payment method</string>
    <string name="_1">1</string>
    <string name="total_price">Total price</string>
    <string name="pending">Pending</string>
    <string name="notifications">Notifications</string>
    <string name="approve">Approve</string>
    <string name="deny">Deny</string>
    <string name="logout">Logout</string>
    <string name="chat">Chat</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="my_products">My Products</string>
    <string name="edit">Edit</string>
    <string name="new_password">New password</string>
    <string name="old_password">Old password</string>
    <string name="language">Language</string>
    <string name="feedback">Feedback</string>
    <string name="delete_account">Delete Account</string>
    <string name="send">Send</string>

    <string name="fill_upFields">Please fill all fields</string>
    <string name="registration_is_done">"Registration is done!"</string>
    <string name="old_password_is_required">Old password is required</string>
    <string name="profile_updated">Profile updated</string>
    <string name="user_not_found">User not found</string>
    <string name="uploaded">Uploaded</string>
    <string name="no_products_saved">No products saved!</string>
    <string name="sent">Sent</string>
    <string name="no_products_found">No products found</string>
    <string name="deleted">Deleted</string>
    <string name="no_orders">No orders</string>
    <string name="review_sent">Review sent</string>
    <string name="saved">Saved</string>
    <string name="delete">deleted</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_chat">No chat</string>
    <string name="message">message</string>

    <string name="users">users</string>

</resources>